[gd_scene load_steps=66 format=3 uid="uid://cn3xywvmt1iba"]

[ext_resource type="Script" uid="uid://dk0le0s7hhpol" path="res://skeleton_state/skeleton.gd" id="1_udm6s"]
[ext_resource type="Texture2D" uid="uid://bakr8o2dkvhkc" path="res://assets/Entities/Skeleton/Skeleton enemy.png" id="2_f54k8"]
[ext_resource type="Script" uid="uid://d0mgi8o786rjv" path="res://skeleton_state/skeleton_base_state.gd" id="3_80ent"]
[ext_resource type="Script" uid="uid://e8ybbny1c7mr" path="res://skeleton_state/skeleton_idle_state.gd" id="4_8khkc"]
[ext_resource type="Script" uid="uid://c1olsbsckujfs" path="res://skeleton_state/skeleton_wandering_state.gd" id="5_3k07j"]
[ext_resource type="Script" uid="uid://d0f3ghfrnyua1" path="res://skeleton_state/skeleton_chasing_state.gd" id="6_70udp"]
[ext_resource type="AudioStream" uid="uid://vqm3bcdxdpjw" path="res://assets/Sound Effect/Bird/face_hit_Large_20.wav" id="7_0rlb3"]
[ext_resource type="Script" uid="uid://bud385rk6ein8" path="res://skeleton_state/skeleton_get_hit_state.gd" id="7_ybq08"]
[ext_resource type="AudioStream" uid="uid://cd2awkc2thnfy" path="res://assets/Sound Effect/Bird/blade_hit_07.wav" id="8_tvptw"]
[ext_resource type="AudioStream" uid="uid://cg3if5pir38qc" path="res://assets/Sound Effect/Enemy Knight/01. Damage Grunt (Male).wav" id="9_23tsb"]
[ext_resource type="AudioStream" uid="uid://brvc6v3ixuo4q" path="res://assets/Sound Effect/Player/Footsteps Loop 1 (Rpg).wav" id="10_kyjpx"]
[ext_resource type="AudioStream" uid="uid://4h8kvdsrswrr" path="res://assets/Sound Effect/Enemy Knight/04. Damage Grunt (Male).wav" id="11_gaubj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l1ocx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sf2x1"]
atlas = ExtResource("2_f54k8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb4qa"]
atlas = ExtResource("2_f54k8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5kby"]
atlas = ExtResource("2_f54k8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw1ka"]
atlas = ExtResource("2_f54k8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_528vg"]
atlas = ExtResource("2_f54k8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ohue"]
atlas = ExtResource("2_f54k8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5w8q"]
atlas = ExtResource("2_f54k8")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohlor"]
atlas = ExtResource("2_f54k8")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkuwf"]
atlas = ExtResource("2_f54k8")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hon4d"]
atlas = ExtResource("2_f54k8")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1m33"]
atlas = ExtResource("2_f54k8")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srs2s"]
atlas = ExtResource("2_f54k8")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0xrn"]
atlas = ExtResource("2_f54k8")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsoko"]
atlas = ExtResource("2_f54k8")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoj7p"]
atlas = ExtResource("2_f54k8")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq0js"]
atlas = ExtResource("2_f54k8")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nqnx"]
atlas = ExtResource("2_f54k8")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t4he"]
atlas = ExtResource("2_f54k8")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f8mp"]
atlas = ExtResource("2_f54k8")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qbc4"]
atlas = ExtResource("2_f54k8")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3277s"]
atlas = ExtResource("2_f54k8")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jwxr"]
atlas = ExtResource("2_f54k8")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhak8"]
atlas = ExtResource("2_f54k8")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbab7"]
atlas = ExtResource("2_f54k8")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58vjw"]
atlas = ExtResource("2_f54k8")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y8wn"]
atlas = ExtResource("2_f54k8")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i0jj"]
atlas = ExtResource("2_f54k8")
region = Rect2(704, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7chf"]
atlas = ExtResource("2_f54k8")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0wqw"]
atlas = ExtResource("2_f54k8")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74q5g"]
atlas = ExtResource("2_f54k8")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef5xm"]
atlas = ExtResource("2_f54k8")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pw4"]
atlas = ExtResource("2_f54k8")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ovyy"]
atlas = ExtResource("2_f54k8")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6np0"]
atlas = ExtResource("2_f54k8")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7b3g"]
atlas = ExtResource("2_f54k8")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_og73t"]
atlas = ExtResource("2_f54k8")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6llc"]
atlas = ExtResource("2_f54k8")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_842pu"]
atlas = ExtResource("2_f54k8")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e04yb"]
atlas = ExtResource("2_f54k8")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iexba"]
atlas = ExtResource("2_f54k8")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe5ha"]
atlas = ExtResource("2_f54k8")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2qho"]
atlas = ExtResource("2_f54k8")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3oho"]
atlas = ExtResource("2_f54k8")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfpgl"]
atlas = ExtResource("2_f54k8")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0fhy"]
atlas = ExtResource("2_f54k8")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_84otd"]
atlas = ExtResource("2_f54k8")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpwk4"]
atlas = ExtResource("2_f54k8")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv86s"]
atlas = ExtResource("2_f54k8")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvrim"]
atlas = ExtResource("2_f54k8")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k46vv"]
atlas = ExtResource("2_f54k8")
region = Rect2(704, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ju4l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf2x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb4qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5kby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw1ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_528vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ohue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5w8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohlor")
}],
"loop": false,
"name": &"attack_1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkuwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hon4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1m33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srs2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0xrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsoko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoj7p")
}],
"loop": false,
"name": &"attack_2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq0js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nqnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t4he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f8mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qbc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3277s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jwxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhak8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbab7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58vjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y8wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i0jj")
}],
"loop": true,
"name": &"chasing",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7chf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0wqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74q5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef5xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ovyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6np0")
}],
"loop": true,
"name": &"get_hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7b3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og73t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6llc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_842pu")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e04yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iexba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe5ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2qho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3oho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfpgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0fhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84otd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpwk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv86s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvrim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k46vv")
}],
"loop": true,
"name": &"wandering",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pffm5"]
radius = 208.393

[node name="Skeleton" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_udm6s")

[node name="PhysicsBody" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_l1ocx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6ju4l")
animation = &"chasing"

[node name="SkeletonBaseState" type="Node" parent="."]
script = ExtResource("3_80ent")

[node name="IdleState" type="Node" parent="SkeletonBaseState"]
script = ExtResource("4_8khkc")

[node name="WanderingState" type="Node" parent="SkeletonBaseState"]
script = ExtResource("5_3k07j")

[node name="ChasingState" type="Node" parent="SkeletonBaseState"]
script = ExtResource("6_70udp")

[node name="GetHitState" type="Node" parent="SkeletonBaseState"]
script = ExtResource("7_ybq08")

[node name="StateLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -47.0
offset_right = 20.0
offset_bottom = -24.0

[node name="EnemySound" type="Node2D" parent="."]

[node name="GetHit" type="AudioStreamPlayer2D" parent="EnemySound"]
stream = ExtResource("7_0rlb3")
volume_db = -12.0

[node name="GetStunned" type="AudioStreamPlayer2D" parent="EnemySound"]
stream = ExtResource("8_tvptw")
volume_db = -6.0

[node name="GetHurt" type="AudioStreamPlayer2D" parent="EnemySound"]
stream = ExtResource("9_23tsb")

[node name="FootStep" type="AudioStreamPlayer2D" parent="EnemySound"]
stream = ExtResource("10_kyjpx")
max_distance = 500.0

[node name="SwordHit" type="AudioStreamPlayer2D" parent="EnemySound"]
stream = ExtResource("8_tvptw")
volume_db = -7.0

[node name="Death" type="AudioStreamPlayer2D" parent="EnemySound"]
stream = ExtResource("11_gaubj")

[node name="ChasingArea2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="ChasingAreaCollision" type="CollisionShape2D" parent="ChasingArea2D"]
position = Vector2(0, 22.667)
shape = SubResource("CircleShape2D_pffm5")

[node name="ChasingRayCast" type="RayCast2D" parent="."]
target_position = Vector2(24, 0)
collision_mask = 2

[connection signal="body_entered" from="ChasingArea2D" to="." method="_on_chasing_area_2d_body_entered"]
[connection signal="body_exited" from="ChasingArea2D" to="." method="_on_chasing_area_2d_body_exited"]
